# RedisStudio

./: .eslintrc.json  .gitignore  .gitmodules  LICENSE-MIT  README.md  index.html  package.json  tsconfig.json  vite.config.ts
.run/: Redis-Studio-Front.run.xml  Redis-Studio-Tauri.run.xml
datasource/: Cargo.toml
datasource/src/: lib.rs
graph-computing/: Cargo.toml  graph-example.dot
graph-computing/proto/: proto_row.proto
graph-computing/resources/: example_data_01.xlsx
graph-computing/src/: lib.rs
graph-computing/src/net/: channel.rs
graph-computing/src/row/: mod.rs  proto_row.rs  utils.rs
graph-computing/src/storage/: connection.rs  mod.rs  redis.rs  storage_manager.rs  types.rs  zookeeper.rs
graph-computing/src/units/: computing_units.rs  context.rs  mod.rs  unit_utils.rs
graph-computing/tests/: base_graph_test.rs  lua.rs  lua_demo01.lua  ssh_tunnel.rs
src/: App.less  App.tsx  common-style.less  main.tsx  styles.less
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: default_setting.json
src-tauri/src/: constant.rs  lib.rs  main.rs  setup.rs  spotlight_command.rs  tray.rs  window.rs
src-tauri/src/command/: common_cmd.rs  datasource_mgr_command.rs  dataview_mgr_command.rs  index_search.rs  menu_controller.rs  mod.rs  pattern_manager.rs  redis_cmd.rs  spotlight_command.rs  window_controller.rs  zookeeper_cmd.rs
src-tauri/src/dao/: data_view_dao.rs  datasource_dao.rs  mod.rs  redis_pattern_dao.rs  types.rs
src-tauri/src/docs/: gendoc.rs  mod.rs
src-tauri/src/indexer/: indexer_initializer.rs  key_tokenize.rs  mod.rs  redis_indexer.rs  simple_infer_pattern.rs  tantivy_indexer.rs
src-tauri/src/log/: mod.rs  project_logger.rs
src-tauri/src/menu/: main_menu.rs  menu_manager.rs  mod.rs
src-tauri/src/net/: mod.rs  net_launcher.rs
src-tauri/src/storage/: mod.rs  redis_pool.rs  sqlite_storage.rs
src-tauri/src/utils/: mod.rs  redis_util.rs  system.rs
src-tauri/src/view/: command.rs
src-tauri/src/win/: mod.rs  pinned_windows.rs  window.rs
src-tauri/tests/: pattern_inference_test.rs  redis_pattern_dao_test.rs  redis_test.rs  sshtunnel_test.rs  tantivy_indexer.rs  tantivy_test.rs  tcp_test.rs
src/assets/locales/en/: translation.json
src/assets/locales/zh/: translation.json
src/components/datasource/: DataSource.less  DataSource.tsx  DataSourceChangedEvent.ts  DataSourceConfig.less  DataSourceConfig.tsx  DataSourceGroup.tsx  DataSourceItem.tsx  DataSourceTree.less  DataSourceTree.tsx  DataSourceType.less  DataSourceType.tsx
src/components/datasource/dsdbselector/: DatabaseItem.less  DatabaseItem.tsx  DatabaseList.tsx  index.less  index.tsx
src/components/datasource/dsdropdown/: DatasourceItem.less  DatasourceItem.tsx  DatasourceManagerHeader.less  DatasourceManagerHeader.tsx  RecentDatasource.tsx  index.less  index.tsx
src/components/datasource/redis/: RedisDatasourceEditor.tsx  index.less
src/components/datasource/ssh/: SSHConfiguration.less  SSHConfiguration.tsx
src/components/datasource/zookeeper/: ZkDatasourceEditor.tsx
src/components/document/: RedisDoc.tsx
src/components/editor/ContentEditor/: ContentEditor.tsx
src/components/favorite/: FavoriteTree.less  FavoriteTree.tsx  index.less
src/components/icons/: AdvancedSettingsIcon.tsx  ClientNumIcon.tsx  ConsoleIcon.tsx  CpuIcon.tsx  DataViewIcon.tsx  DatabaseNumberIcon.tsx  DatasourceIcon.tsx  DisconnectedIcon.tsx  MacCommandIcon.tsx  MetricIcon.tsx  RedisIcon.tsx  SSLIcon.tsx  StreamComputingIcon.tsx  StretchIcon.tsx  ZkIcon.tsx
src/components/menu/: Menu.less
src/components/redis/: Redis.tsx  RedisFooter.tsx  RedisKey.less  RedisKey.tsx  RedisKeyTree.less  RedisKeyTree.tsx  index.less
src/components/redis/dashboard/: HomeDashboardMini.less  HomeDashboardMini.tsx
src/components/redis/dataview/: DataView.less  DataView.tsx  DataViewGroup.tsx  DataViewHeader.tsx  VarNode.less  VarNode.tsx  VarNodeEditor.less  VarNodeEditor.tsx
src/components/redis/footer/: RedisFooter.less  RedisFooter.tsx
src/components/redis/redis-pin/: RedisPin.less  RedisPin.tsx  index.tsx
src/components/redis/redis-scripts/: RedisCmdEditor.tsx  RedisCmdOutput.less  RedisCmdOutput.tsx  RedisResp.less  RedisResp.tsx  RedisScript.less  RedisScript.tsx  RedisScriptHelper.tsx
src/components/redis/tags/: RedisKeyTags.tsx
src/components/scrollbar/: SmoothScrollbar.tsx
src/components/sider/: SiderMenu.css  SiderMenu.tsx
src/components/titlebar/: GlobalWindowTitleBar.tsx  index.less
src/components/zookeeper/: ZkNode.tsx  ZkNodeTree.less  ZkNodeTree.tsx  Zookeeper.tsx  index.less
src/hooks/: useEscape.tsx
src/initialization/: DatabaseInitialization.ts
src/utils/: RedisTypeStyle.less  RedisTypeUtil.ts  RustIteractor.tsx  SmoothScrollbar.tsx  SqlLiteManager.ts  SysManager.ts  SystemProperties.ts  TauriUtil.tsx  TimeUtil.ts  Util.ts  i18n.ts
src/utils/button/: BsButton.less  BsButton.tsx  BsIconButton.less  BsIconButton.tsx
src/windows/create-new-key/: NewKeyCreator.less  NewKeyCreator.tsx  index.tsx
src/windows/modify-key/: ModifyKeyCreator.less  ModifyKeyCreator.tsx  index.tsx
src/windows/node-configuration/: NodeConfiguration.tsx  main.tsx
src/windows/project-selector/: ProjectorSelector.tsx  index.tsx
src/windows/redis-value-editor/: RedisValueEditor.tsx  index.tsx
src/windows/splashscreen/: SplashScreen.less  SplashScreen.tsx  index.tsx
src/windows/spotlight-search/: SpotlightSearch.tsx  index.less  index.tsx
windows/: create-new-key.html  datasource-database-selector.html  datasource-dropdown.html  modify-key.html  projector-selector.html  redis-pin.html  redis-value-editor.html  splashscreen.html  spotlight-search.html
xstorage/: Cargo.toml
xstorage/xstorage-core/: Cargo.toml
xstorage/xstorage-core/src/: connection.rs  error.rs  lib.rs  storage.rs
xstorage/xstorage-redis/: Cargo.toml
xstorage/xstorage-redis/src/: lib.rs  storage.rs
xstorage/xstorage-redis/src/connection/: mod.rs
xstorage/xstorage-redis/src/options/: connect.rs  mod.rs  parse.rs
xstorage/xstorage-zookeeper/: Cargo.toml
(+46 files in other folders)
