[package]
name = "redisstudio"
version = "0.0.0"
description = "A Tauri App"
authors = ["Zhan"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [
    "macos-private-api", "unstable", "tray-icon", "image-ico", "image-png",
] }
tauri-plugin-shell = "2.0.0-beta"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
window-vibrancy = "0.5.0"
protobuf = "3.2.0"
redis = "0.25.4"
regex = { version = "1.10.2", features = [] }
sqlx = "0.7.4"
tokio = "1.35.1"
# search engine
tantivy = "0.22.0"
rand = "0.8.5"
thiserror = "1.0.30"
zookeeper = "0.8.0"
base64 = "0.13"
md5 = "0.7.0"
env_logger = "0.11.3"
log = "0.4.21"
chrono = "0.4.38"
tauri-plugin-clipboard-manager = "2.0.0-beta"
tauri-plugin-global-shortcut = "2.0.0-beta"
tauri-plugin-window-state = "2.0.0-beta"
tauri-plugin-store = "2.0.0-beta.6"
lazy_static = "1.5.0"
anyhow = "1.0.86"
ssh2 = "0.9.4"
futures = "0.3.30"

[dependencies.tauri-plugin-sql]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v2"
features = ["sqlite"] # or "postgres", or "mysql"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.0.0-beta"
