[package]
name = "redisstudio"
version = "0.0.0"
description = "A Tauri App"
authors = ["Zhan"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc.10", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.24", features = ["macos-private-api", "tray-icon", "image-ico", "image-png"] }
tauri-plugin-shell = "2.0.0-rc.3"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
monitor = { git = "https://github.com/ahkohd/tauri-toolkit", branch = "v2" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
protobuf = "3.2.0"
redis = { version = "0.26.1", features = ["tokio-comp"] }
regex = { version = "1.10.2", features = [] }
sqlx = "0.8.2"
tokio = { version = "1.38.0", features = ["full"] }
# search engine
tantivy = "0.22.0"
rand = "0.8.5"
thiserror = "1.0.63"
base64 = "0.13"
md5 = "0.7.0"
env_logger = "0.11.3"
log = "0.4.21"
chrono = "0.4.38"
tauri-plugin-clipboard-manager = "2.0.0-rc.3"
tauri-plugin-global-shortcut = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-window-state = "2.0.0-rc.3"
tauri-plugin-store = "2.0.0-rc.3"
global-hotkey = "0.6.2"
lazy_static = "1.5.0"
anyhow = "1.0.86"
ssh2 = "0.9.4"
futures = "0.3.30"
uuid = { version = "1.8.0", features = ["v4"] }
bitflags = "2.4.1"
tauri-plugin-log = "2.0.0-rc.2"

[dependencies.tauri-plugin-sql]
features = ["sqlite"] # or "postgres", or "mysql"
version = "2.0.0-rc.2"
# alternatively with Git
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
#default = ["custom-protocol"]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
