[package]
name = "xstorage-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xstorage-core = { workspace = true }
url = { version = "2.5.0", default-features = false }
futures-core = { version = "0.3.30", default-features = false }
futures-util = { version = "0.3.30", default-features = false, features = ["alloc", "sink", "io"] }
futures-channel = { version = "0.3.30", default-features = false, features = ["sink", "alloc", "std"] }
redis = "0.25.3"